# notification-playground

./: BUILD  MODULE.bazel  README.md  go.mod  go.sum
quotes_gen/: BUILD.bazel  README.md  main.go
