load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "quotes_gen_lib",
    srcs = ["main.go"],
    importpath = "notification-playground/quotes_gen",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_rs_cors//:cors",
        "@com_github_rs_zerolog//:zerolog",
        "@org_gonum_v1_gonum//stat/distuv",
    ],
)

go_binary(
    name = "quotes_gen",
    embed = [":quotes_gen_lib"],
    visibility = ["//visibility:public"],
)
